--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "module-boilerplate",
   "version": "0.0.1",
   "description": "Boilerplate to speed up the creation of node modules using Babel and Webpack already configured as default",
-  "main": "index.js",
+  "main": "dist/example.js",
+  "scripts": {
+    "build": "node ./node_modules/webpack/bin/webpack",
+    "prepublish": "npm run build",
+    "run": "node dist/example.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src"
+  },
   "repository": {
     "url": "https://github.com/RodrigoOler/module-boilerplate.git",
     "type": "git"
@@ -10,6 +17,12 @@
   "author": "Rodrigo Oler <roodrigoprogrammer@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "babel-preset-stage-1": "^6.16.0"
   }
 }
